# dear-imgui-unity-dev

./: .gitmodules
dear-imgui-project/Assets/Presets/Defaults/: DirectionalLight_Default.preset
dear-imgui-project/Assets/Scenes/: SampleSceneBuiltIn.unity  SampleSceneURP.unity
dear-imgui-project/Assets/Scripts/: AutoLoadPipelineAsset.cs  DearImGuiDemo.cs
dear-imgui-project/Assets/Settings/: URP-ForwardRenderer.asset  URP-Pipeline.asset  URP-PostProcess.asset
dear-imgui-project/Assets/Settings/DearImGui/: Font Atlas Config.asset
dear-imgui-project/Assets/Settings/DearImGui/Styles/: DarkGrayStyle.asset
dear-imgui-project/ProjectSettings/: EditorBuildSettings.asset  PresetManager.asset  ProjectSettings.asset
src/: CMakeLists.txt  build-native.cmd  build-native.sh  build-wrapper.cmd
src/cimgui-freetype/: CMakeLists.txt  cimgui_freetype.cpp  cimgui_freetype.h
src/cimgui-unity/: CMakeLists.txt  imconfig_unity.h  plugin_custom_assert.cpp  plugin_custom_assert.h
